--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cloud",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://smiilliin.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,8 +11,13 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "jwt-decode": "^4.0.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intl": "^6.6.8",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,5 +45,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@types/path-browserify": "^1.0.2",
+    "@types/react-modal": "^3.16.3",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
+    "styled-components": "^6.1.12",
+    "typescript-eslint": "^8.0.0"
   }
 }
